--- a/BigDataCluster/infra/hdfs/baseimage/base/Dockerfile.3.4.0
+++ b/BigDataCluster/infra/hdfs/baseimage/base/Dockerfile.3.4.0
@@ -8,7 +8,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
     netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
-ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-arm64
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
 
 # Import Hadoop release keys (already included in the project)
 #COPY hadoop_files/KEYS /tmp/KEYS
@@ -65,3 +65,5 @@ ADD entrypoint.sh /entrypoint.sh
 RUN chmod a+x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
+
+#CMD ["hdfs", "namenode", "-format"]
