--- a/BigDataCluster/infra/hdfs/final-cluster-compose-v1.yaml
+++ b/BigDataCluster/infra/hdfs/final-cluster-compose-v1.yaml
@@ -29,30 +29,30 @@ services:
       - ./config
     networks:
       - etl_task
-  datanode2:
-    image: datanode:hadoop-3.4.0 
-    container_name: datanode2
-    restart: always
-    volumes:
-      - hadoop_datanode2:/hadoop/dfs/data
-    environment:
-      SERVICE_PRECONDITION: "namenode:9870"
-    env_file:
-      - ./config
-    networks:
-      - etl_task
-  datanode3:
-    image: datanode:hadoop-3.4.0 
-    container_name: datanode3
-    restart: always
-    volumes:
-      - hadoop_datanode3:/hadoop/dfs/data
-    environment:
-      SERVICE_PRECONDITION: "namenode:9870"
-    env_file:
-      - ./config
-    networks:
-      - etl_task
+  # datanode2:
+  #   image: datanode:hadoop-3.4.0 
+  #   container_name: datanode2
+  #   restart: always
+  #   volumes:
+  #     - hadoop_datanode2:/hadoop/dfs/data
+  #   environment:
+  #     SERVICE_PRECONDITION: "namenode:9870"
+  #   env_file:
+  #     - ./config
+  #   networks:
+  #     - etl_task
+  # datanode3:
+  #   image: datanode:hadoop-3.4.0 
+  #   container_name: datanode3
+  #   restart: always
+  #   volumes:
+  #     - hadoop_datanode3:/hadoop/dfs/data
+  #   environment:
+  #     SERVICE_PRECONDITION: "namenode:9870"
+  #   env_file:
+  #     - ./config
+  #   networks:
+  #     - etl_task
     
   spark:
     image: docker.io/bitnami/spark:3.5.2
